Changed buildfile to use tasks with java preview features