@@ -4,7 +4,7 @@ plugins {
 }
 
 group = "stretz.loom"
-version = "1.0-SNAPSHOT"
+version = "1.1-SNAPSHOT"
 
 repositories {
     mavenCentral()
@@ -12,6 +12,16 @@ repositories {
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs?.add("--enable-preview")
+}
+
+tasks.withType<Jar> {
+    manifest {
+        attributes["Main-Class"] = "stretz.loom.Main"
+    }
 }
 
 application {
